git文档手册---分支管理

--- a/docs/git/分支管理.md
+++ b/docs/git/分支管理.md
@@ -67,3 +67,24 @@ $ git merge 要合并的分支名
 $ git merge -—no-ff -m ‘合并提交描述’ 要合并的分支名
 
 ```
+
+## 将本地分支推送到远程分支
+```
+git push 远程仓库名 远程分支名
+```
+
+## 抓取远程分支
+本地没有对应分支的情况
+```
+git checkout -b dev origin/dev
+
+-- 在本地创建dev分支并pull远程分支dev到本地dev分支
+```
+本地已有分支，需要关联远程分支
+指定本地dev分支与远程origin/dev分支的链接
+```
+$ git branch --set-upstream-to=origin/dev dev
+-- 然后切换到dev分支，拉取代码
+$ git checkout dev
+$ git pull
+```
