git文档手册---分支管理

--- a/docs/git/分支管理.md
+++ b/docs/git/分支管理.md
@@ -40,10 +40,13 @@ $ git push 远程版本库 远程分支名
 $ git branch -d 分支名称
 ```
 
-强制删除分支，<font color="#FF6347">这可能会导致没有合并的内容丢失</font>
+强制删除分支
 ```
 $ git branch -D 分支名称
 ```
+::: warning 注意
+强制删除会导致没有合并的内容丢失
+:::
 
 删除远程分支
 ```
